--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -35,6 +35,10 @@ import MobileMenu from "./MobileMenu.astro";
     #main-header.scrolled .logo {
         color: #000;
     }
+    #main-header.menu-open .header-background {
+        background-color: rgba(255, 255, 255, 0.5);
+        backdrop-filter: blur(10px);
+    }
 </style>
 <script>
     const header = document.getElementById('main-header');
