--- a/src/layouts/MobileMenu.astro
+++ b/src/layouts/MobileMenu.astro
@@ -1,65 +1,76 @@
 <div class="md:hidden">
     <button id="mobile-menu-toggle" class="text-current focus:outline-none relative z-50">
-        <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 transform transition-transform duration-300" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-            <polyline points="6 9 12 15 18 9"></polyline>
-        </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 transform transition-transform duration-300" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <polyline points="6 9 12 15 18 9"></polyline>
+      </svg>
     </button>
     <div id="mobile-menu-container" class="absolute left-0 right-0 overflow-hidden transition-all duration-500 ease-in-out">
-        <div id="mobile-menu-content" class="py-4 px-6 transform translate-y-[-100%] transition-transform duration-500 ease-in-out">
-            <nav class="text-center">
-                <ul>
-                    <li class="my-3"><a href="/" class="text-current text-xl hover:text-gray-300 transition-colors duration-300">Domů</a></li>
-                    <li class="my-3"><a href="/o-nas" class="text-current text-xl hover:text-gray-300 transition-colors duration-300">O nás</a></li>
-                    <li class="my-3"><a href="/sluzby" class="text-current text-xl hover:text-gray-300 transition-colors duration-300">Služby</a></li>
-                    <li class="my-3"><a href="/portfolio" class="text-current text-xl hover:text-gray-300 transition-colors duration-300">Portfolio</a></li>
-                    <li class="my-3"><a href="/kontakt" class="text-current text-xl hover:text-gray-300 transition-colors duration-300">Kontakt</a></li>
-                </ul>
-            </nav>
-        </div>
+      <div id="mobile-menu-content" class="py-4 px-6 transform translate-y-[-100%] transition-transform duration-500 ease-in-out">
+        <nav class="text-center">
+          <ul>
+            <li class="my-3"><a href="/" class="text-current text-xl hover:text-gray-300 transition-colors duration-300">Domů</a></li>
+            <li class="my-3"><a href="/o-nas" class="text-current text-xl hover:text-gray-300 transition-colors duration-300">O nás</a></li>
+            <li class="my-3"><a href="/sluzby" class="text-current text-xl hover:text-gray-300 transition-colors duration-300">Služby</a></li>
+            <li class="my-3"><a href="/portfolio" class="text-current text-xl hover:text-gray-300 transition-colors duration-300">Portfolio</a></li>
+            <li class="my-3"><a href="/kontakt" class="text-current text-xl hover:text-gray-300 transition-colors duration-300">Kontakt</a></li>
+          </ul>
+        </nav>
+      </div>
     </div>
-</div>
-<style>
+  </div>
+  
+  <style>
     #mobile-menu-container {
-        max-height: 0;
-        transition: max-height 0.5s ease-in-out;
+      max-height: 0;
+      transition: max-height 0.5s ease-in-out 0.5s; /* Přidáno zpoždění 0.5s */
     }
     #mobile-menu-container.open {
-        max-height: 100vh;
+      max-height: 100vh;
+      transition: max-height 0.5s ease-in-out;
+    }
+    #mobile-menu-content {
+      transition: transform 0.5s ease-in-out;
     }
     #mobile-menu-content.open {
-        transform: translateY(0);
+      transform: translateY(0);
     }
-</style>
-<script>
+  </style>
+  
+  <script>
     const mobileMenuToggle = document.getElementById('mobile-menu-toggle');
     const mobileMenuContainer = document.getElementById('mobile-menu-container');
     const mobileMenuContent = document.getElementById('mobile-menu-content');
     const headerContainer = document.getElementById('header-container');
     const arrowIcon = mobileMenuToggle?.querySelector('svg');
     let isOpen = false;
+  
     function toggleMenu() {
-        isOpen = !isOpen;
-        if (mobileMenuContainer && mobileMenuContent && headerContainer) {
-            if (isOpen) {
-                mobileMenuContainer.classList.add('open');
-                mobileMenuContent.classList.add('open');
-                headerContainer.classList.add('menu-open');
-                arrowIcon?.classList.add('rotate-180');
-                // Nastavení výšky headeru po krátké prodlevě
-                setTimeout(() => {
-                    const totalHeight = headerContainer.offsetHeight + mobileMenuContent.offsetHeight;
-                    headerContainer.style.height = `${totalHeight}px`;
-                }, 50);
-            } else {
-                mobileMenuContainer.classList.remove('open');
-                mobileMenuContent.classList.remove('open');
-                headerContainer.classList.remove('menu-open');
-                arrowIcon?.classList.remove('rotate-180');
-                headerContainer.style.height = '';
-            }
+      isOpen = !isOpen;
+      if (mobileMenuContainer && mobileMenuContent && headerContainer) {
+        if (isOpen) {
+          mobileMenuContainer.classList.add('open');
+          mobileMenuContent.classList.add('open');
+          headerContainer.classList.add('menu-open');
+          arrowIcon?.classList.add('rotate-180');
+          // Nastavení výšky headeru po krátké prodlevě
+          setTimeout(() => {
+            const totalHeight = headerContainer.offsetHeight + mobileMenuContent.offsetHeight;
+            headerContainer.style.height = `${totalHeight}px`;
+          }, 50);
+        } else {
+          mobileMenuContent.classList.remove('open');
+          arrowIcon?.classList.remove('rotate-180');
+          // Zpoždění skrytí pozadí
+          setTimeout(() => {
+            mobileMenuContainer.classList.remove('open');
+            headerContainer.classList.remove('menu-open');
+            headerContainer.style.height = '';
+          }, 500); // Zpoždění odpovídá délce animace textu
         }
+      }
     }
+  
     if (mobileMenuToggle) {
-        mobileMenuToggle.addEventListener('click', toggleMenu);
+      mobileMenuToggle.addEventListener('click', toggleMenu);
     }
-</script>
+  </script>
