--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -20,9 +20,11 @@ const navItems = [
                 </ul>
             </div>
             <button id="mobile-menu-toggle" class="md:hidden text-current focus:outline-none relative z-50 p-2">
-                <svg xmlns="http://www.w3.org/2000/svg" class="w-8 h-8 transform transition-transform duration-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <polyline points="6 9 12 15 18 9"></polyline>
-                </svg>
+                <div class="w-8 h-8 flex items-center justify-center">
+                    <svg xmlns="http://www.w3.org/2000/svg" class="w-6 h-6 transform transition-transform duration-500" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                        <polyline points="6 9 12 15 18 9"></polyline>
+                    </svg>
+                </div>
             </button>
         </nav>
         <div id="mobile-menu-container" class="md:hidden overflow-hidden transition-all duration-500 ease-in-out h-0">
@@ -44,12 +46,12 @@ const navItems = [
         transition: height 0.3s ease-in-out, background-color 0.3s ease-in-out;
     }
     .header-background {
-        background-color: rgba(255, 255, 255, 0.1);
+        background-color: rgba(255, 255, 255, 0);
         backdrop-filter: blur(10px);
         opacity: 1;
     }
     #header-container.scrolled .header-background {
-        background-color: rgba(255, 255, 255, 0.5);
+        background-color: rgba(255, 255, 255, 0.6);
     }
     #header-container.scrolled .nav-link,
     #header-container.scrolled .logo {
@@ -57,6 +59,12 @@ const navItems = [
     }
     #mobile-menu-container {
         transition: height 0.5s ease-in-out;
+    }
+    #mobile-menu-toggle {
+        cursor: pointer;
+    }
+    #mobile-menu-toggle .w-8 {
+        touch-action: manipulation;
     }
 </style>
 <script>
@@ -96,7 +104,7 @@ const navItems = [
     // Zavření menu při kliknutí mimo něj
     document.addEventListener('click', (event) => {
         const target = event.target as Node;
-        if (isMenuOpen && mobileMenuContainer && !mobileMenuContainer.contains(target) && target !== mobileMenuToggle) {
+        if (isMenuOpen && mobileMenuContainer && !mobileMenuContainer.contains(target) && target !== mobileMenuToggle && !mobileMenuToggle?.contains(target)) {
             toggleMenu();
         }
     });
